--- a/index.html
+++ b/index.html
@@ -7,25 +7,20 @@
   <link rel="stylesheet" href="./styles/normalize.css">
   <title>Научиться учиться</title>
 </head>
+
 <body>
   <div class="page">
-
     <header class="header">
-
       <logo class="logo logo_place_header">
         <img src="./images/logo_place_header.svg" alt="ЛОГОТИП">
       </logo>
-
       <h1 class="header__title">Научиться учиться</h1>
       <h2 class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
-        <a href="#">Узнать?</a>
+        <a href="#" class="link">Узнать?</a>
       </h2>
-      <img src="./images/header-image.png" alt="картинка?" class="header__image">
+      <img src="./images/header-image.png" alt="Опять двойка" class="header__image">
       <div class="header__square-pic"></div>
-
     </header>
-
-
 
 
 
@@ -33,9 +28,21 @@
 
     <main class="content">
       <section class="description">
+        <h3 class="brief link">Главные проблемы в обучении</h3>
+        <div class="main-text">
+          <p class="paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
+          <p class="paragraph"> <span class="span-accent">Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
+          <p class="paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
+        </div>
       </section>
 
+
+
+
+
+
       <section class="digits">
+        <h4 class="section-title">Цифры и факты</h4>
       </section>
 
       <section class="feynman">
