--- a/index.html
+++ b/index.html
@@ -24,29 +24,82 @@
 
 
 
-
-
     <main class="content">
       <section class="description">
-        <h3 class="brief link">Главные проблемы в обучении</h3>
-        <div class="main-text">
-          <p class="paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
-          <p class="paragraph"> <span class="span-accent">Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
-          <p class="paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
+        <div class="two-columns">
+          <h1 class="two-columns__brief link">Главные проблемы в обучении</h1>
+          <div class="two-columns__main-text">
+            <p class="paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
+            <p class="paragraph"> <span class="span-accent">Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
+            <p class="paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
+        </div>
         </div>
       </section>
 
-
-
-
-
-
       <section class="digits">
-        <h4 class="section-title">Цифры и факты</h4>
+        <h1 class="section__title">Цифры и факты</h1>
+        <h2 class="section__subtitle">Про учёбу и мозг</h2>
+        <ul class="table">
+          <li class="table__cell">
+            <p class="table__cell_heading">86 миллиардов</p>
+            <p class="table__cell_text">Число нейронов в мозге человека</p>
+          </li>
+          <li class="table__cell">
+            <p class="table__cell_heading">2.1 миллиарда</p>
+            <p class="table__cell_text">Число нуждающихся в повышении квалификации</p>
+            <p class="table__cell_text">Всемирный Банк, 2017</p>
+          </li>
+          <li class="table__cell">
+            <p class="table__cell_heading">1000 терабайт</p>
+            <p class="table__cell_text">Объём памяти человека</p>
+          </li>
+          <li class="table__cell">
+            <p class="table__cell_heading">500 триллионов</p>
+            <p class="table__cell_text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
+          </li>
+          <li class="table__cell">
+            <p class="table__cell_heading">420 миллионов</p>
+            <p class="table__cell_text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства
+              Всемирный Банк, 2017</p>
+          </li>
+          <li class="table__cell">
+            <p class="table__cell_heading">17–20 лет</p>
+            <p class="table__cell_text">Пик обучаемости</p>
+          </li>
+          <li class="table__cell">
+            <p class="table__cell_heading">1885 год</p>
+            <p class="table__cell_text">Открытие кривой забывания</p>
+          </li>
+          <li class="table__cell">
+            <p class="table__cell_heading">1889 год</p>
+            <p class="table__cell_text">Открытие условного рефлекса</p>
+          </li>
+        </ul>
       </section>
+
+
+
+
 
       <section class="feynman">
-      </section>
+
+        <h1 class="section__title section__title_feynman">Метод Фейнмана</h1>
+        <h2 class="section__subtitle section__subtitle_feynman">Выучить и не забыть.</h2>
+        <a href="#" class="link link_feynman">Подробнее</a>
+        <img src="./images/feynman.png" alt="Фейнман" class="feynman_image">
+
+
+
+
+
+    </section>
+
+
+
+
+
+
+
 
       <section class="kaufman">
       </section>
