--- a/index.html
+++ b/index.html
@@ -41,59 +41,48 @@
         <h2 class="section__subtitle">Про учёбу и мозг</h2>
         <ul class="table">
           <li class="table__cell">
-            <p class="table__cell_heading">86 миллиардов</p>
-            <p class="table__cell_text">Число нейронов в мозге человека</p>
+            <p class="table__heading">86 миллиардов</p>
+            <p class="table__text">Число нейронов в мозге человека</p>
           </li>
           <li class="table__cell">
-            <p class="table__cell_heading">2.1 миллиарда</p>
-            <p class="table__cell_text">Число нуждающихся в повышении квалификации</p>
-            <p class="table__cell_text">Всемирный Банк, 2017</p>
+            <p class="table__heading">2.1 миллиарда</p>
+            <p class="table__text">Число нуждающихся в повышении квалификации</p>
+            <p class="table__text">Всемирный Банк, 2017</p>
           </li>
           <li class="table__cell">
-            <p class="table__cell_heading">1000 терабайт</p>
-            <p class="table__cell_text">Объём памяти человека</p>
+            <p class="table__heading">1000 терабайт</p>
+            <p class="table__text">Объём памяти человека</p>
           </li>
           <li class="table__cell">
-            <p class="table__cell_heading">500 триллионов</p>
-            <p class="table__cell_text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
+            <p class="table__heading">500 триллионов</p>
+            <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
           </li>
           <li class="table__cell">
-            <p class="table__cell_heading">420 миллионов</p>
-            <p class="table__cell_text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства
+            <p class="table__heading">420 миллионов</p>
+            <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства
               Всемирный Банк, 2017</p>
           </li>
           <li class="table__cell">
-            <p class="table__cell_heading">17–20 лет</p>
-            <p class="table__cell_text">Пик обучаемости</p>
+            <p class="table__heading">17–20 лет</p>
+            <p class="table__text">Пик обучаемости</p>
           </li>
           <li class="table__cell">
-            <p class="table__cell_heading">1885 год</p>
-            <p class="table__cell_text">Открытие кривой забывания</p>
+            <p class="table__heading">1885 год</p>
+            <p class="table__text">Открытие кривой забывания</p>
           </li>
           <li class="table__cell">
-            <p class="table__cell_heading">1889 год</p>
-            <p class="table__cell_text">Открытие условного рефлекса</p>
+            <p class="table__heading">1889 год</p>
+            <p class="table__text">Открытие условного рефлекса</p>
           </li>
         </ul>
       </section>
 
-
-
-
-
       <section class="feynman">
-
         <h1 class="section__title section__title_feynman">Метод Фейнмана</h1>
         <h2 class="section__subtitle section__subtitle_feynman">Выучить и не забыть.</h2>
         <a href="#" class="link link_feynman">Подробнее</a>
         <img src="./images/feynman.png" alt="Фейнман" class="feynman_image">
-
-
-
-
-
-    </section>
-
+      </section>
 
 
 
@@ -102,11 +91,100 @@
 
 
       <section class="kaufman">
+        <h1 class="section__title section__title_theme_dark">Принципы обучения</h1>
+        <h2 class="section__subtitle section__subtitle_theme_dark">от Джоша Кауфмана</h2>
+        <ul class="table table_theme_dark">
+          <li class="table_cell table__cell_theme_dark">
+            <p class="table__heading table__heading_theme_dark">1</p>
+            <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
+          </li>
+          <li class="table_cell table__cell_theme_dark">
+            <p class="table__heading table__heading_theme_dark">2</p>
+            <p class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
+          </li>
+          <li class="table_cell table__cell_theme_dark">
+            <p class="table__heading table__heading_theme_dark">3</p>
+            <p class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</p>
+          </li>
+          <li class="table_cell table__cell_theme_dark">
+            <p class="table__heading table__heading_theme_dark">4</p>
+            <p class="table__text table__text_theme_dark">Разбейте навык на элементы.</p>
+          </li>
+          <li class="table_cell table__cell_theme_dark">
+            <p class="table__heading table__heading_theme_dark">5</p>
+            <p class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
+          </li>
+          <li class="table_cell table__cell_theme_dark">
+            <p class="table__heading table__heading_theme_dark">6</p>
+            <p class="table__text table__text_theme_dark">Устраните препятствия для занятий.</p>
+          </li>
+          <li class="table_cell table__cell_theme_dark">
+            <p class="table__heading table__heading_theme_dark">7</p>
+            <p class="table__text table__text_theme_dark">Выделите специальное время для занятий.</p>
+          </li>
+          <li class="table_cell table__cell_theme_dark">
+            <p class="table__heading table__heading_theme_dark">8</p>
+            <p class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
+          </li>
+          <li class="table_cell table__cell_theme_dark">
+            <p class="table__heading table__heading_theme_dark">9</p>
+            <p class="table__text table__text_theme_dark">Pанимайтесь по расписанию, короткими интенсивными интервалами.</p>
+          </li>
+          <li class="table_cell table__cell_theme_dark">
+            <p class="table__heading table__heading_theme_dark">10</p>
+            <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
+          </li>
+        </ul>
+        <img src="./images/kaufman-triangle.svg" class="kaufman__triangle" alt="Треугольник Кауфмана">
       </section>
     </main>
+
+
+
+
+
     <footer class="footer">
+      <div class="footer__columns">
+
+        <div class="footer__column footer__column_content_copyright">
+          <logo class="logo">
+            <img src="./images/logo_place_footer.svg" alt="Логотип" class="logo_place_footer">
+          </logo>
+          <p class="autor">&copy; 2021. Андрей Калачиков</p>
+        </div>
+
+        <div class="footer__column footer__column_content_info">
+          <h1 class="column-heading">О Практикуме</h1>
+          <nav class="column-links">
+            <a href="#" class="column-link">Главная</a>
+            <a href="#" class="column-link">Концепция</a>
+            <a href="#" class="column-link">Наставники</a>
+          </nav>
+        </div>
+
+        <div class="footer__column footer__column_content_social">
+          <h1 class="column-heading">Соцсети</h1>
+          <nav class="column-links">
+            <a href="#" class="column-link">
+              <img src="./images/facebook_color_white.svg" alt="Иконка" class="social-icon">
+              Facebook
+            </a>
+            <a href="#" class="column-link">
+              <img src="./images/vk_color_white.svg" alt="Иконка" class="social-icon">
+              ВКонтакте
+            </a>
+            <a href="#" class="column-link">
+              <img src="./images/instagram_color_white.svg" alt="Иконка" class="social-icon">
+              Instagram
+            </a>
+          </nav>
+        </div>
+      </div>
+
 
     </footer>
+
+
   </div>
 </body>
 </html>
