Первый раз до конца

--- a/index.html
+++ b/index.html
@@ -16,13 +16,11 @@
       </logo>
       <h1 class="header__title">Научиться учиться</h1>
       <h2 class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
-        <a href="#" class="link">Узнать?</a>
+        <a href="#" class="link">Узнать &rarr;</a>
       </h2>
       <img src="./images/header-image.png" alt="Опять двойка" class="header__image">
       <div class="header__square-pic"></div>
     </header>
-
-
 
     <main class="content">
       <section class="description">
@@ -81,14 +79,8 @@
         <h1 class="section__title section__title_feynman">Метод Фейнмана</h1>
         <h2 class="section__subtitle section__subtitle_feynman">Выучить и не забыть.</h2>
         <a href="#" class="link link_feynman">Подробнее</a>
-        <img src="./images/feynman.png" alt="Фейнман" class="feynman_image">
+        <img src="./images/feynman.png" alt="Фейнман" class="feynman_image"> !
       </section>
-
-
-
-
-
-
 
       <section class="kaufman">
         <h1 class="section__title section__title_theme_dark">Принципы обучения</h1>
@@ -128,7 +120,7 @@
           </li>
           <li class="table_cell table__cell_theme_dark">
             <p class="table__heading table__heading_theme_dark">9</p>
-            <p class="table__text table__text_theme_dark">Pанимайтесь по расписанию, короткими интенсивными интервалами.</p>
+            <p class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
           </li>
           <li class="table_cell table__cell_theme_dark">
             <p class="table__heading table__heading_theme_dark">10</p>
@@ -139,20 +131,14 @@
       </section>
     </main>
 
-
-
-
-
     <footer class="footer">
-      <div class="footer__columns">
-
+      <div class="footer footer__columns">
         <div class="footer__column footer__column_content_copyright">
           <logo class="logo">
             <img src="./images/logo_place_footer.svg" alt="Логотип" class="logo_place_footer">
           </logo>
           <p class="autor">&copy; 2021. Андрей Калачиков</p>
         </div>
-
         <div class="footer__column footer__column_content_info">
           <h1 class="column-heading">О Практикуме</h1>
           <nav class="column-links">
@@ -161,7 +147,6 @@
             <a href="#" class="column-link">Наставники</a>
           </nav>
         </div>
-
         <div class="footer__column footer__column_content_social">
           <h1 class="column-heading">Соцсети</h1>
           <nav class="column-links">
@@ -180,11 +165,7 @@
           </nav>
         </div>
       </div>
-
-
     </footer>
-
-
   </div>
 </body>
 </html>
