--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <p class="paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
             <p class="paragraph"> <span class="span-accent">Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
             <p class="paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
-        </div>
+          </div>
         </div>
       </section>
 
@@ -78,7 +78,7 @@
       <section class="feynman">
         <h1 class="section__title section__title_feynman">Метод Фейнмана</h1>
         <h2 class="section__subtitle section__subtitle_feynman">Выучить и не забыть.</h2>
-        <a href="#" class="link link_feynman">Подробнее</a>
+        <a href="#" class="link link_feynman">Подробнее &rarr;</a>
         <img src="./images/feynman.png" alt="Фейнман" class="feynman_image"> !
       </section>
 
