--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
 <body>
   <div class="page">
     <header class="header">
-      <logo class="logo logo_place_header">
-        <img src="./images/logo_place_header.svg" alt="ЛОГОТИП">
-      </logo>
+        <img src="./images/logo_place_header.svg" alt="ЛОГОТИП" class="logo_place_header">
       <h1 class="header__title">Научиться учиться</h1>
       <h2 class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
         <a href="#" class="link">Узнать &rarr;</a>
@@ -25,7 +23,7 @@
     <main class="content">
       <section class="description">
         <div class="two-columns">
-          <h1 class="two-columns__brief link">Главные проблемы в обучении</h1>
+          <h2 class="two-columns__brief link">Главные проблемы в обучении</h2>
           <div class="two-columns__main-text">
             <p class="paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
             <p class="paragraph"> <span class="span-accent">Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
@@ -35,8 +33,8 @@
       </section>
 
       <section class="digits">
-        <h1 class="section__title">Цифры и факты</h1>
-        <h2 class="section__subtitle">Про учёбу и мозг</h2>
+        <h2 class="section__title">Цифры и факты</h2>
+        <h3 class="section__subtitle">Про учёбу и мозг</h3>
         <ul class="table">
           <li class="table__cell">
             <p class="table__heading">86 миллиардов</p>
@@ -76,15 +74,15 @@
       </section>
 
       <section class="feynman">
-        <h1 class="section__title section__title_feynman">Метод Фейнмана</h1>
-        <h2 class="section__subtitle section__subtitle_feynman">Выучить и не забыть.</h2>
+        <h2 class="section__title section__title_feynman">Метод Фейнмана</h2>
+        <h3 class="section__subtitle section__subtitle_feynman">Выучить и не забыть.</h3>
         <a href="#" class="link link_feynman">Подробнее &rarr;</a>
         <img src="./images/feynman.png" alt="Фейнман" class="feynman_image"> !
       </section>
 
       <section class="kaufman">
-        <h1 class="section__title section__title_theme_dark">Принципы обучения</h1>
-        <h2 class="section__subtitle section__subtitle_theme_dark">от Джоша Кауфмана</h2>
+        <h2 class="section__title section__title_theme_dark">Принципы обучения</h2>
+        <h3 class="section__subtitle section__subtitle_theme_dark">от Джоша Кауфмана</h3>
         <ul class="table table_theme_dark">
           <li class="table_cell table__cell_theme_dark">
             <p class="table__heading table__heading_theme_dark">1</p>
@@ -134,13 +132,11 @@
     <footer class="footer">
       <div class="footer footer__columns">
         <div class="footer__column footer__column_content_copyright">
-          <logo class="logo">
             <img src="./images/logo_place_footer.svg" alt="Логотип" class="logo_place_footer">
-          </logo>
           <p class="autor">&copy; 2021. Андрей Калачиков</p>
         </div>
         <div class="footer__column footer__column_content_info">
-          <h1 class="column-heading">О Практикуме</h1>
+          <h2 class="column-heading">О Практикуме</h2>
           <nav class="column-links">
             <a href="#" class="column-link">Главная</a>
             <a href="#" class="column-link">Концепция</a>
