--- a/index.html
+++ b/index.html
@@ -3,159 +3,159 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./styles/style.css">
   <link rel="stylesheet" href="./styles/normalize.css">
+  <link rel="stylesheet" href="./styles/style.css">
   <title>Научиться учиться</title>
 </head>
 
 <body>
   <div class="page">
     <header class="header">
-        <img src="./images/logo_place_header.svg" alt="ЛОГОТИП" class="logo_place_header">
+        <img src="./images/logo_place_header.svg" alt="ЛОГОТИП" class="logo logo_place_header">
       <h1 class="header__title">Научиться учиться</h1>
-      <h2 class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
-        <a href="#" class="link">Узнать &rarr;</a>
-      </h2>
-      <img src="./images/header-image.png" alt="Опять двойка" class="header__image">
+      <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
+        <a href="#" class="header__link">Узнать &rarr;</a>
+      </p>
+      <img src="./images/header-image.png" alt="Опять двойка" class="header__main-illustration">
       <div class="header__square-pic"></div>
     </header>
 
     <main class="content">
       <section class="description">
         <div class="two-columns">
-          <h2 class="two-columns__brief link">Главные проблемы в обучении</h2>
+          <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
           <div class="two-columns__main-text">
-            <p class="paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
-            <p class="paragraph"> <span class="span-accent">Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
-            <p class="paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
+            <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
+            <p class="two-columns__paragraph"> <span class="two-columns__span-accent">Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
+            <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
           </div>
         </div>
       </section>
 
       <section class="digits">
         <h2 class="section__title">Цифры и факты</h2>
-        <h3 class="section__subtitle">Про учёбу и мозг</h3>
+        <p class="section__subtitle">Про учёбу и мозг</p>
         <ul class="table">
           <li class="table__cell">
-            <p class="table__heading">86 миллиардов</p>
+            <h3 class="table__heading">86 миллиардов</h3>
             <p class="table__text">Число нейронов в мозге человека</p>
           </li>
           <li class="table__cell">
-            <p class="table__heading">2.1 миллиарда</p>
+            <h3 class="table__heading">2.1 миллиарда</h3>
             <p class="table__text">Число нуждающихся в повышении квалификации</p>
             <p class="table__text">Всемирный Банк, 2017</p>
           </li>
           <li class="table__cell">
-            <p class="table__heading">1000 терабайт</p>
+            <h3 class="table__heading">1000 терабайт</h3>
             <p class="table__text">Объём памяти человека</p>
           </li>
           <li class="table__cell">
-            <p class="table__heading">500 триллионов</p>
+            <h3 class="table__heading">500 триллионов</h3>
             <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
           </li>
           <li class="table__cell">
-            <p class="table__heading">420 миллионов</p>
+            <h3 class="table__heading">420 миллионов</h3>
             <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства
               Всемирный Банк, 2017</p>
           </li>
           <li class="table__cell">
-            <p class="table__heading">17–20 лет</p>
+            <h3 class="table__heading">17–20 лет</h3>
             <p class="table__text">Пик обучаемости</p>
           </li>
           <li class="table__cell">
-            <p class="table__heading">1885 год</p>
+            <h3 class="table__heading">1885 год</h3>
             <p class="table__text">Открытие кривой забывания</p>
           </li>
           <li class="table__cell">
-            <p class="table__heading">1889 год</p>
+            <h3 class="table__heading">1889 год</h3>
             <p class="table__text">Открытие условного рефлекса</p>
           </li>
         </ul>
       </section>
 
       <section class="feynman">
-        <h2 class="section__title section__title_feynman">Метод Фейнмана</h2>
-        <h3 class="section__subtitle section__subtitle_feynman">Выучить и не забыть.</h3>
-        <a href="#" class="link link_feynman">Подробнее &rarr;</a>
-        <img src="./images/feynman.png" alt="Фейнман" class="feynman_image"> !
+        <h2 class="feynman__title">Метод Фейнмана</h2>
+        <p class="feynman__subtitle">Выучить и не забыть.</p>
+        <a href="#" class="feynman__link">Подробнее &rarr;</a>
+        <img src="./images/feynman.png" alt="Фейнман" class="feynman__image">
       </section>
 
       <section class="kaufman">
         <h2 class="section__title section__title_theme_dark">Принципы обучения</h2>
-        <h3 class="section__subtitle section__subtitle_theme_dark">от Джоша Кауфмана</h3>
+        <p class="section__subtitle section__subtitle_theme_dark">от Джоша Кауфмана</p>
         <ul class="table table_theme_dark">
           <li class="table_cell table__cell_theme_dark">
-            <p class="table__heading table__heading_theme_dark">1</p>
+            <h3 class="table__heading table__heading_theme_dark">1</h3>
             <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
           </li>
           <li class="table_cell table__cell_theme_dark">
-            <p class="table__heading table__heading_theme_dark">2</p>
+            <h3 class="table__heading table__heading_theme_dark">2</h3>
             <p class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
           </li>
           <li class="table_cell table__cell_theme_dark">
-            <p class="table__heading table__heading_theme_dark">3</p>
+            <h3 class="table__heading table__heading_theme_dark">3</h3>
             <p class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</p>
           </li>
           <li class="table_cell table__cell_theme_dark">
-            <p class="table__heading table__heading_theme_dark">4</p>
+            <h3 class="table__heading table__heading_theme_dark">4</h3>
             <p class="table__text table__text_theme_dark">Разбейте навык на элементы.</p>
           </li>
           <li class="table_cell table__cell_theme_dark">
-            <p class="table__heading table__heading_theme_dark">5</p>
+            <h3 class="table__heading table__heading_theme_dark">5</h3>
             <p class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
           </li>
           <li class="table_cell table__cell_theme_dark">
-            <p class="table__heading table__heading_theme_dark">6</p>
+            <h3 class="table__heading table__heading_theme_dark">6</h3>
             <p class="table__text table__text_theme_dark">Устраните препятствия для занятий.</p>
           </li>
           <li class="table_cell table__cell_theme_dark">
-            <p class="table__heading table__heading_theme_dark">7</p>
+            <h3 class="table__heading table__heading_theme_dark">7</h3>
             <p class="table__text table__text_theme_dark">Выделите специальное время для занятий.</p>
           </li>
           <li class="table_cell table__cell_theme_dark">
-            <p class="table__heading table__heading_theme_dark">8</p>
+            <h3 class="table__heading table__heading_theme_dark">8</h3>
             <p class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
           </li>
           <li class="table_cell table__cell_theme_dark">
-            <p class="table__heading table__heading_theme_dark">9</p>
+            <h3 class="table__heading table__heading_theme_dark">9</h3>
             <p class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
           </li>
           <li class="table_cell table__cell_theme_dark">
-            <p class="table__heading table__heading_theme_dark">10</p>
+            <h3 class="table__heading table__heading_theme_dark">10</h3>
             <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
           </li>
         </ul>
-        <img src="./images/kaufman-triangle.svg" class="kaufman__triangle" alt="Треугольник Кауфмана">
+        <div class="kaufman__triangle"></div>
       </section>
     </main>
 
     <footer class="footer">
-      <div class="footer footer__columns">
+      <div class="footer__columns">
         <div class="footer__column footer__column_content_copyright">
-            <img src="./images/logo_place_footer.svg" alt="Логотип" class="logo_place_footer">
-          <p class="autor">&copy; 2021. Андрей Калачиков</p>
+            <img src="./images/logo_place_footer.svg" alt="Логотип" class="logo logo_place_footer">
+          <p class="footer__autor">&copy; 2021. Андрей Калачиков</p>
         </div>
         <div class="footer__column footer__column_content_info">
-          <h2 class="column-heading">О Практикуме</h2>
-          <nav class="column-links">
-            <a href="#" class="column-link">Главная</a>
-            <a href="#" class="column-link">Концепция</a>
-            <a href="#" class="column-link">Наставники</a>
+          <h2 class="footer__column-heading">О Практикуме</h2>
+          <nav class="footer__column-links">
+            <a href="#" class="footer__column-link">Главная</a>
+            <a href="#" class="footer__column-link">Концепция</a>
+            <a href="#" class="footer__column-link">Наставники</a>
           </nav>
         </div>
         <div class="footer__column footer__column_content_social">
-          <h1 class="column-heading">Соцсети</h1>
-          <nav class="column-links">
-            <a href="#" class="column-link">
-              <img src="./images/facebook_color_white.svg" alt="Иконка" class="social-icon">
+          <h2 class="footer__column-heading">Соцсети</h2>
+          <nav class="footer__column-links">
+            <a href="#" class="footer__column-link">
+              <img src="./images/facebook_color_white.svg" alt="Иконка" class="footer__social-icon">
               Facebook
             </a>
-            <a href="#" class="column-link">
-              <img src="./images/vk_color_white.svg" alt="Иконка" class="social-icon">
+            <a href="#" class="footer__column-link">
+              <img src="./images/vk_color_white.svg" alt="Иконка" class="footer__social-icon">
               ВКонтакте
             </a>
-            <a href="#" class="column-link">
-              <img src="./images/instagram_color_white.svg" alt="Иконка" class="social-icon">
+            <a href="#" class="footer__column-link">
+              <img src="./images/instagram_color_white.svg" alt="Иконка" class="footer__social-icon">
               Instagram
             </a>
           </nav>
