--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./styles/normalize.css">
-  <link rel="stylesheet" href="./styles/style.css">
+  <link rel="stylesheet" href="./pages/how-to-learn.css">
   <title>Научиться учиться</title>
 </head>
 
@@ -17,7 +16,7 @@
         <a href="#" class="header__link">Узнать &rarr;</a>
       </p>
       <img src="./images/header-image.png" alt="Опять двойка" class="header__main-illustration">
-      <div class="header__square-pic"></div>
+      <div class="header__square-pic rotation"></div>
     </header>
 
     <main class="content">
@@ -30,6 +29,42 @@
             <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
           </div>
         </div>
+      </section>
+
+      <section class="techniques">
+        <h2 class="section__title">Техники обучения</h2>
+        <p class="section__subtitle">Пять практик от Барбары Оакли</p>
+        <ul class="cards">
+          <li class="cards__item">
+            <img src="./images/images_sprint-2/cards-attention.png" alt="Вдохновляющая картинка" class="cards__image">
+            <h3 class="cards__title">Два вида внимания</h3>
+            <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
+          </li>
+
+          <li class="cards__item">
+            <img src="./images/images_sprint-2/cards-recall.png" alt="Вдохновляющая картинка" class="cards__image">
+            <h3 class="cards__title">Recall</h3>
+            <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
+          </li>
+
+          <li class="cards__item">
+            <img src="./images/images_sprint-2/cards-interliving.png" alt="Вдохновляющая картинка" class="cards__image">
+            <h3 class="cards__title">Интерливинг</h3>
+            <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
+          </li>
+
+          <li class="cards__item">
+            <img src="./images/images_sprint-2/cards-question.png" alt="Вдохновляющая картинка" class="cards__image">
+            <h3 class="cards__title">Вопросы</h3>
+            <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
+          </li>
+
+          <li class="cards__item">
+            <img src="./images/images_sprint-2/cards-competence.png" alt="Вдохновляющая картинка" class="cards__image">
+            <h3 class="cards__title">Иллюзия компетентности</h3>
+            <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
+          </li>
+        </ul>
       </section>
 
       <section class="digits">
